Added navigation bar with smooth scrolling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">AP</div>
+        <ul class="nav-menu">
+            <li><a href="#about">about</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#contact">contact</a></li>
+        </ul>
+    </nav>
     <h1>My Portfolio</h1>
     <script src="./script.js"></script>
 </body>
