--- a/index.html
+++ b/index.html
@@ -1,21 +1,339 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTWtvXafugbAJN3LW1pSWSaKuVtg5W88jRuA&s" type="image/png">
+    <title>Creative Portfolio - Computer Technician Intern & Developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
+    <!-- Navigation -->
     <nav class="navbar">
-        <div class="logo">AP</div>
-        <ul class="nav-menu">
-            <li><a href="#about">about</a></li>
-            <li><a href="#portfolio">portfolio</a></li>
-            <li><a href="#contact">contact</a></li>
-        </ul>
+        <div class="nav-container">
+            <div class="logo">
+                <span class="logo-icon">AP</span>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#featured" class="nav-link">Featured</a></li>
+                <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
+                <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+            <div class="social-links">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-dribbble"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
     </nav>
-    <h1>My Portfolio</h1>
-    <script src="./script.js"></script>
+
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+        <div class="hero-container">
+            <div class="hero-left">
+                <h1 class="hero-title">Computer Technician Intern</h1>
+                <p class="hero-description">
+                    A Computer Technician Intern that driven by Curiosity, Problem Solving and the dedication on keeping the systems running at their best.
+                </p>
+            </div>
+            
+            <div class="hero-center">
+                <div class="portrait-container">
+                    <img src="https://scontent.fcgy2-3.fna.fbcdn.net/v/t1.15752-9/593932735_1060851586118095_4270210088347677572_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeF1KSuS2IgXblGgw7G8I4QZyA4FA-wpJ2nIDgUD7CknaRYOW0svHr5KFws7tD-wK82ZRKm7QzJrNdCtPwAZGuIm&_nc_ohc=L89L6ZqQ5B8Q7kNvwH4qLos&_nc_oc=AdnT7rpGI4ynqKWrQGAQ7hM7Q2AoyHPkrq8F5_rjXuVmU_2ulCh6rvujNttZnGjn2x0&_nc_zt=23&_nc_ht=scontent.fcgy2-3.fna&oh=03_Q7cD4QFtVqFS0n5eCQ2Gi5kzFutb6t56SMX42I88a_EPqX6isA&oe=698DC3DC" alt="Portfolio Portrait" class="hero-portrait">
+                </div>
+            </div>
+            
+            <div class="hero-right">
+                <img src="https://mgx-backend-cdn.metadl.com/generate/images/899944/2026-01-13/cb08ccf7-6b5f-44bd-ab20-51d7543a105d.png" alt="Abstract brush" class="abstract-brush right-brush">
+                <h1 class="hero-title">&lt;coder&gt;</h1>
+                <p class="hero-description">
+                    Front End Developer for creating clean and efficient with the modern experiences.
+                </p>
+                <div class="code-snippet">
+                    <code>
+                        &lt;html&gt;<br>
+                        &nbsp;&nbsp;light:18dpx;<br>
+                        &nbsp;&nbsp;&lt;class="1edi"&gt;<br>
+                        &nbsp;&nbsp;&lt;S3 HTML5<br>
+                        &nbsp;&nbsp;col:#000;<br>
+                        &nbsp;&nbsp;$Query
+                    </code>
+                </div>
+            </div>
+        </div>
+        <div class="scroll-indicator">
+            <div class="mouse">
+                <div class="wheel"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="about" id="about">
+        <div class="container">
+            <h2 class="section-title fade-in">About Me</h2>
+            <div class="about-content">
+                <div class="about-text fade-in">
+                    <p> I'm a creative Computer Technician Intern who bridges the gap between hardware, design, and code. 
+  With a sharp eye for detail and a strong technical foundation, I build digital experiences that are both reliable and visually engaging. 
+  I love combining hands-on troubleshooting, system optimization, and clean, efficient coding to create solutions that truly work.</p>
+                    <p>  My approach blends user-centered design principles, modern web technologies, and practical hardware knowledge to deliver results that exceed expectations. 
+  From maintaining systems to crafting intuitive interfaces, I strive to make technology functional, beautiful, and enjoyable for everyone.</p>
+                </div>
+                    <div class="skills-grid fade-in">
+            <div class="skill-card">
+                <i class="fas fa-laptop-code"></i>
+                <h3>Coding & Programming</h3>
+                <p>Writing clean, efficient, and functional code for web and software projects</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-desktop"></i>
+                <h3>Computer Hardware</h3>
+                <p>Assembling, troubleshooting, and maintaining computer systems</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-server"></i>
+                <h3>System Optimization</h3>
+                <p>Improving hardware and software performance for smooth operations</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-tools"></i>
+                <h3>Technical Support</h3>
+                <p>Providing hands-on support and solutions for technical issues</p>
+            </div>
+        </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured Section -->
+    <section class="featured" id="featured">
+    <div class="container">
+        <h2 class="section-title fade-in">Some of My Latest Work</h2>
+        <div class="featured-grid">
+
+            <div class="featured-card fade-in">
+                <div class="card-image">
+                    <img src="https://cdn.dribbble.com/userupload/20235438/file/original-c39105aa8112fb4a9cade506c98ac423.gif" alt="Project 1">
+                    <div class="card-overlay">
+                        <h3>Responsive Website</h3>
+                        <p>Built with HTML5, CSS3, and JavaScript</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="featured-card fade-in">
+                <div class="card-image">
+                    <img src="https://i.pinimg.com/originals/7b/0e/3e/7b0e3e99ab07ba3b6a7a5505ae47ec02.gif" alt="Project 2">
+                    <div class="card-overlay">
+                        <h3>Hardware Setup</h3>
+                        <p>PC Assembly, Troubleshooting & Maintenance</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="featured-card fade-in">
+                <div class="card-image">
+                    <img src="https://i.pinimg.com/originals/19/65/80/19658020c5a07257377d3802244fe687.gif" alt="Project 3">
+                    <div class="card-overlay">
+                        <h3>System Optimization</h3>
+                        <p>Improving performance & ensuring smooth operations</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+    <!-- Portfolio Section -->
+  <section class="portfolio" id="portfolio">
+    <div class="container">
+        <h2 class="section-title fade-in">Portfolio</h2>
+        <div class="portfolio-filters fade-in">
+            <button class="filter-btn active" data-filter="all">All</button>
+            <button class="filter-btn" data-filter="hardware">Hardware</button>
+            <button class="filter-btn" data-filter="development">Development</button>
+            <button class="filter-btn" data-filter="projects">Projects</button>
+        </div>
+        <div class="portfolio-grid">
+
+            <div class="portfolio-item fade-in" data-category="development projects">
+                <div class="portfolio-image">
+                    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/source/8930b329502133.55f6b199518e9.gif" alt="Portfolio Item">
+                    <div class="portfolio-overlay">
+                        <h3>E-Commerce Website</h3>
+                        <p>Responsive Web Development with HTML, CSS & JavaScript</p>
+                        <a href="#" class="view-project">View Project <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item fade-in" data-category="hardware projects">
+                <div class="portfolio-image">
+                    <img src="https://images.squarespace-cdn.com/content/v1/5fd96636dde7cb43cc16cfe0/22643dea-5fe7-49b0-b4ec-b2bfd3f98e8a/hardware-engineer.jpg" alt="Portfolio Item">
+                    <div class="portfolio-overlay">
+                        <h3>PC Build & Maintenance</h3>
+                        <p>Assembly, Wire Management & Troubleshooting</p>
+                        <a href="#" class="view-project">View Project <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item fade-in" data-category="development projects">
+                <div class="portfolio-image">
+                    <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyaDNmdXA5dWg1bHU2azRjZWU1eThleTNkZWlnZnBtbnA3dW91bndvbiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9LQHvkbIzTSLe/200w.gif" alt="Portfolio Item">
+                    <div class="portfolio-overlay">
+                        <h3>Corporate Website</h3>
+                        <p>Web Development & Interactive UI</p>
+                        <a href="#" class="view-project">View Project <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item fade-in" data-category="projects hardware">
+                <div class="portfolio-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSw859MORXW3MF2kbnPTa40KuFHk3u7LMXHNQ&s" alt="Portfolio Item">
+                    <div class="portfolio-overlay">
+                        <h3>System Optimization</h3>
+                        <p>Hardware & Software Tuning for Smooth Performance</p>
+                        <a href="#" class="view-project">View Project <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-item fade-in" data-category="development projects">
+                <div class="portfolio-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQebPvR3oQjpJRjFNxdCESoK5J4etlMCsDeXA&s" alt="Portfolio Item">
+                    <div class="portfolio-overlay">
+                        <h3>Dashboard Interface</h3>
+                        <p>Web Application Development & UX Integration</p>
+                        <a href="#" class="view-project">View Project <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+    <!-- Blog Section -->
+    <section class="blog" id="blog">
+    <div class="container">
+        <h2 class="section-title fade-in">Latest from Blog</h2>
+        <div class="blog-grid">
+
+            <article class="blog-card fade-in">
+                <div class="blog-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWoRB-I3o8XnEaxKQkOK-l0G4AIlIj9VmrFg&s" alt="Blog Post">
+                </div>
+                <div class="blog-content">
+                    <span class="blog-date">January 10, 2026</span>
+                    <h3>Top HTML & CSS Tips for Beginners</h3>
+                    <p>Learn the best practices to write clean, efficient, and maintainable code for your projects.</p>
+                    <a href="https://dev.to/7hecoder/htmlcss-tips-for-beginners-14e7" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </article>
+
+            <article class="blog-card fade-in">
+                <div class="blog-image">
+                    <img src="https://png.pngtree.com/thumb_back/fh260/background/20240716/pngtree-3d-electronic-computer-hardware-technology-motherboard-digital-chip-image_16010809.jpg" alt="Blog Post">
+                </div>
+                <div class="blog-content">
+                    <span class="blog-date">January 5, 2026</span>
+                    <h3>Computer Hardware & basic Maintenance</h3>
+                    <p>Step-by-step guide on assembling, troubleshooting, and maintaining reliable computer systems.</p>
+                    <a href="https://www.hp.com/us-en/shop/tech-takes/pc-maintenance-and-repair-tips" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </article>
+
+            <article class="blog-card fade-in">
+                <div class="blog-image">
+                    <img src="https://media.thinkcomputers.org/2016/11/webdesign.jpg" alt="Blog Post">
+                </div>
+                <div class="blog-content">
+                    <span class="blog-date">December 28, 2025</span>
+                    <h3>Optimizing Your System Performance</h3>
+                    <p>Learn practical tips for improving both hardware and software efficiency to keep your system running smoothly.</p>
+                    <a href="https://support.microsoft.com/en-us/windows/tips-to-improve-pc-performance-in-windows-b3b3ef5b-5953-fb6a-2528-4bbed82fba96" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </article>
+
+        </div>
+    </div>
+</section>
+
+    <!-- Contact Section -->
+    <section class="Contact" id="Contact">
+        <div class="container">
+            <h2 class="section-title fade-in">Get In Touch</h2>
+            <div class="contact-content">
+                <div class="contact-info fade-in">
+                    <h3>Let's Work Together</h3>
+                    <p>I'm always interested in hearing about new projects and opportunities. Whether you have a question or just want to say hi, feel free to reach out!</p>
+                    <div class="contact-details">
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a3cbc6cfcfcce3d3ccd1d7c5cccfcacc8dc0ccce">[email&#160;protected]</a></span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <span>+63 992 491 1726</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Purok 3 San Jose Libona Bukidnon</span>
+                        </div>
+                    </div>
+                    <div class="social-links-contact">
+                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-dribbble"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <form class="contact-form fade-in">
+                    <div class="form-group">
+                        <input type="text" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                        <textarea placeholder="Your Message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2026 Creative Portfolio. All rights reserved to clint.</p>
+        </div>
+    </footer>
+
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="module" src="./script.js"></script>
 </body>
+
 </html>
