fix the css to fit the phone screen well and fix the humbeger icon to have functions alos make the css function well

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <span class="logo-icon">AP</span>
+                <span class="logo-icon">IT</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -58,8 +58,7 @@
             </div>
             
             <div class="hero-right">
-                <img src="https://mgx-backend-cdn.metadl.com/generate/images/899944/2026-01-13/cb08ccf7-6b5f-44bd-ab20-51d7543a105d.png" alt="Abstract brush" class="abstract-brush right-brush">
-                <h1 class="hero-title">&lt;coder&gt;</h1>
+             <h1 class="hero-title">&lt;coder&gt;</h1>
                 <p class="hero-description">
                     Front End Developer for creating clean and efficient with the modern experiences.
                 </p>
